add Zig namespace for C functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ cmake_minimum_required(VERSION 3.27)
 include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 project(mlem)
 pico_sdk_init()
-add_executable(mlem)
+add_executable(mlem
+    src/wrappers.c
+)
 
 if (STDIO_USB)
     pico_enable_stdio_uart(mlem 0)
@@ -17,7 +19,15 @@ if (STDIO_UART)
 endif()
 
 # Adjust libraries as needed
-target_link_libraries(mlem pico_stdlib pico_cyw43_arch_none ${CMAKE_SOURCE_DIR}/zig-out/mlem.o)
+target_link_libraries(mlem
+    pico_stdlib
+    pico_cyw43_arch_none
+    ${CMAKE_SOURCE_DIR}/zig-out/mlem.o
+    # wrappers
+    -Wl,--wrap=gpio_set_dir
+    -Wl,--wrap=gpio_put
+    # -Wl,--wrap=gpio_get
+)
 
 # Generate binary
 pico_add_extra_outputs(mlem)
